[package]
name = "leafy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
defaultdict = "0.16.0"
poise = "0.5.5"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.96"
tokio = { version = "1.4.0", features = ["rt", "macros", "rt-multi-thread"] }
